k8s/kustomization/instances/overlays/rhlab/kafka/patches/console-ui.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: console-ui-route
spec:
  host: console-ui-route-netsentinel.apps.<CLUSTER_NAME_WITH_BASE_DOMAIN>
